--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/edToDoTitle"
+        android:id="@+id/etToDoTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Enter Todo Title"
